<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <!-- Toolbar/Action Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:title="@string/settings_title"
            app:expandedTitleMarginStart="56dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/settingsToolbar"
                style="?attr/toolbarStyle"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Group 1 -->
            <TextView
                android:id="@+id/group1_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="56dp"
                android:text="Controls"
                android:textColor="?attr/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />


            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sound_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:drawableStart="@drawable/baseline_volume_up_24"
                android:drawablePadding="16dp"
                android:drawableTint="?attr/colorPrimary"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/sound_switch" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/vibration_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/vibration_switch"
                android:drawableStart="@drawable/baseline_vibration_24"
                android:drawableTint="?attr/colorPrimary"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/volumeBtn_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/volumeBtn_switch"
                android:drawableStart="@drawable/baseline_phonelink_ring_24"
                android:drawableTint="?attr/colorPrimary"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:listDivider"/>


<!--            &lt;!&ndash; Group 2 &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/group2_header"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Group 2"-->
<!--                android:textAppearance="?android:textAppearanceMedium"-->
<!--                android:paddingTop="16dp"-->
<!--                android:paddingBottom="8dp"/>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="?android:listDivider"/>-->

<!--            <Switch-->
<!--                android:id="@+id/option3"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Option 3"/>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="?android:listDivider"/>-->

<!--            <Switch-->
<!--                android:id="@+id/option4"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Option 4"/>-->

        </LinearLayout>

    </ScrollView>

</LinearLayout>

